--- a/basicPython/mariaDbPython.ipynb
+++ b/basicPython/mariaDbPython.ipynb
@@ -27,17 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table created successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_table(): \n",
     "    connection = con.connectdb()\n",
@@ -60,6 +52,46 @@
     "    \n",
     "# call function\n",
     "create_table()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 3: insert data in table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Add person successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_table(name=\"\" , address=\"\"): \n",
+    "    connection = con.connectdb()\n",
+    "    cursor = connection.cursor() \n",
+    "\n",
+    "    #Create table \n",
+    "    sql = f\" INSERT INTO person (name,address) VALUES('{name}','{address}')\"\n",
+    "    try:\n",
+    "        cursor.execute(sql)\n",
+    "        # Commit the changes\n",
+    "        connection.commit()\n",
+    "        print(\"Add person successfully\")\n",
+    "    except pymysql.MySQLError as e:\n",
+    "        print(f\"Error connecting to database: {e}\")\n",
+    "        return None \n",
+    "    \n",
+    "# call function\n",
+    "add_table('Mouky','Jom na ny')"
    ]
   },
   {
