--- a/basicPython/mariaDbPython.ipynb
+++ b/basicPython/mariaDbPython.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add person successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def add_table(name=\"\" , address=\"\"): \n",
     "    connection = con.connectdb()\n",
@@ -92,6 +84,63 @@
     "    \n",
     "# call function\n",
     "add_table('Mouky','Jom na ny')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 4: get data from table by using Select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID= 2\n",
+      "ID= Mouky\n",
+      "ID= Jom na ny\n",
+      "_____________________\n",
+      "ID= 1\n",
+      "ID= Nalinthorn\n",
+      "ID= Dong mieng\n",
+      "_____________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_person(): \n",
+    "    connection = con.connectdb()\n",
+    "    cursor = connection.cursor() \n",
+    "\n",
+    "    #Create table \n",
+    "    sql = f\"Select * from person order by id DESC\"\n",
+    "    try:\n",
+    "        cursor.execute(sql)\n",
+    "        # Commit the changes\n",
+    "        connection.commit()\n",
+    "        #get data\n",
+    "        for row in cursor:\n",
+    "            print(\"ID=\",row['id'])   \n",
+    "            print(\"ID=\",row['name'])   \n",
+    "            print(\"ID=\",row['address'])\n",
+    "            print(\"_____________________\")\n",
+    "    except pymysql.MySQLError as e:\n",
+    "        print(f\"Error connecting to database: {e}\")\n",
+    "        return None \n",
+    "    \n",
+    "# call function\n",
+    "read_person()"
    ]
   },
   {
