--- a/home_work/electricTest.ipynb
+++ b/home_work/electricTest.ipynb
@@ -2,15 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id    Datetime      n_id  n_val      machine_id\n",
+      "0   1  2022-11-13  10:06:00   2000  Air_Pump_Ozone\n",
+      "1   2  2022-11-13  10:00:00  10000  Air_Pump_Ozone\n",
+      "2   3  2022-11-13   9:15:00   1200  Air_Pump_Ozone\n",
+      "3   4  2022-11-13   9:00:00    500  Air_Pump_Ozone\n",
+      "4   5  2022-11-13   8:30:00   1100  Air_Pump_Ozone\n",
+      "5   6  2022-11-13   8:00:00   1000  Air_Pump_Ozone\n",
+      "   id   Datetime      n_id  n_val      machine_id  anomaly\n",
+      "0   1 2022-11-13  10:06:00   2000  Air_Pump_Ozone        1\n",
+      "2   3 2022-11-13   9:15:00   1200  Air_Pump_Ozone        1\n",
+      "4   5 2022-11-13   8:30:00   1100  Air_Pump_Ozone        1\n",
+      "5   6 2022-11-13   8:00:00   1000  Air_Pump_Ozone        1\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
     "# Sample data from your provided DataFrame\n",
     "df = pd.read_csv('../pandasLab/dataset/Electric.csv')\n",
+    "print(df)\n",
     "\n",
     "# Convert Datetime column to datetime type\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
@@ -44,9 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.15418443 -0.05139481  0.31155225  0.18134352  0.32737372  0.31778411]\n",
+      "   id    Datetime      n_id  n_val      machine_id  anomaly\n",
+      "1   2  2022-11-13  10:00:00  10000  Air_Pump_Ozone    False\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import IsolationForest\n",
@@ -75,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -145,37 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "n_val 2000 is predicted as an anomaly.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-0.05139480964733467\n",
       "Value 500 is predicted as an anomaly.\n",
       "Value 10000 is predicted as an anomaly.\n",
-      "Value 2000 is predicted as an anomaly.\n",
       "\n",
       "Filtered Data (Anomalies Removed):\n",
-      "   id    Datetime     n_id  n_val      machine_id\n",
-      "2   3  2022-11-13  9:15:00   1200  Air_Pump_Ozone\n",
-      "4   5  2022-11-13  8:30:00   1100  Air_Pump_Ozone\n",
-      "5   6  2022-11-13  8:00:00   1000  Air_Pump_Ozone\n"
+      "   id    Datetime      n_id  n_val      machine_id\n",
+      "0   1  2022-11-13  10:06:00   2000  Air_Pump_Ozone\n",
+      "2   3  2022-11-13   9:15:00   1200  Air_Pump_Ozone\n",
+      "4   5  2022-11-13   8:30:00   1100  Air_Pump_Ozone\n",
+      "5   6  2022-11-13   8:00:00   1000  Air_Pump_Ozone\n"
      ]
     }
    ],
@@ -194,16 +217,17 @@
     "anomaly_scores = model.decision_function(data[['n_val']].values)\n",
     "\n",
     "# Sort anomaly scores in ascending order\n",
-    "sorted_anomaly_scores = sorted(anomaly_scores)\n",
+    "sorted_anomaly_scores = sorted(anomaly_scores) \n",
     "\n",
     "# Calculate threshold based on contamination rate (e.g., 5%)\n",
-    "threshold_index = int(0.05 * len(sorted_anomaly_scores))\n",
+    "threshold_index = int(0.05 * len(sorted_anomaly_scores)) \n",
     "threshold = sorted_anomaly_scores[threshold_index]\n",
     "\n",
     "# Check if specific values are anomalies\n",
     "anomaly_threshold = threshold  # You can adjust this threshold if needed\n",
-    "specific_values = [500, 10000]  # List of specific values to check\n",
     "\n",
+    "specific_values = [500, 10000]  # List of specific values to check\n",
+    "print(anomaly_threshold)\n",
     "for specific_value in specific_values:\n",
     "    if specific_value > anomaly_threshold:\n",
     "        print(f\"Value {specific_value} is predicted as an anomaly.\")\n",
